--- a/eCommerce.WebApp/Pages/Shared/_Layout.cshtml
+++ b/eCommerce.WebApp/Pages/Shared/_Layout.cshtml
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - eCommerce.WebApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/main.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/eCommerce.WebApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+
 </head>
 <body>
     <div class="crf">
@@ -15,7 +21,7 @@
             <div class="container">
                 <div class="d-md-flex justify-content-between">
                     <div class="navbar-brand d-flex justify-content-between align-items-center">
-                        <a href="/"><img alt="Carved Rock Fitness" src="https://www.pluralsight.com/content/dam/pluralsight2/teach/author-tools/carved-rock-fitness/logos/carved-rock-logo.png"></a> <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggle" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                        <a href="/"><img alt="eCommerce shop" width="200" height="200" src="images/blue_panel.png"></a> <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggle" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                     </div>
                     <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNav">
                         <div class="header-nav--main">
@@ -34,7 +40,7 @@
                             <div class="account d-flex flex-column">
                                 John Doe <a href="#">Log Out</a>
                             </div>
-                            <div class="image"><img alt="John Doe" src="https://www.pluralsight.com/content/dam/pluralsight2/teach/author-tools/carved-rock-fitness/profile-pic.jpg"></div>
+                            <div class="image"><img alt="John Doe" width="100" height="100" src="images/square-duck.png"></div>
                         </div>
                     </div>
                 </div>
@@ -61,7 +67,7 @@
                                 <li><a href="#">Order Tracker</a></li>
                                 <li><a href="#">Returns &amp; Refunds</a></li>
                                 <li><a href="#">Sticker Guide</a></li>
-                                <li><a href="#">Store Locator</a></li>
+                                <li><a href="#">Store Locater</a></li>
                                 <li><a href="#">Site Map</a></li>
                             </ul>
                         </div>
@@ -86,13 +92,12 @@
                             </ul>
                         </div>
                         <div class="crf-footer--links crf-footer--social">
-                            <div class="crf-footer--header text-primary d-lg-block  d-none d-sm-none">Follow Us</div>
+                            <div class="crf-footer--header text-primary d-lg-block d-none d-sm-none">Follow Us</div>
                             <ul class="d-lg-block  d-none d-sm-none">
-                                <li><a href="#" class="crf-footer--icon twitter"></a></li>
-                                <li><a href="#" class="crf-footer--icon facebook"></a></li>
-                                <li><a href="#" class="crf-footer--icon pinterest"></a></li>
-                                <li><a href="#" class="crf-footer--icon instagram"></a></li>
-                                <li><a href="#" class="crf-footer--icon googleplus"></a></li>
+                                <li><a href="#"><i class="bi bi-twitter" /></a></li>
+                                <li><a href="#"><i class="bi bi-facebook" /></a></li>
+                                <li><a href="#"><i class="bi bi-pinterest" /></a></li>
+                                <li><a href="#"><i class="bi bi-instagram" /></a></li>
                             </ul>
                             <div class="crf-footer--newsletter">
                                 <div class="crf-footer--header">Email Updates</div>
@@ -101,14 +106,13 @@
                                 <button class="btn btn-primary">Sign up</button>
                             </div>
                         </div>
-                        <div class="crf-footer--links crf-footer-m--social d-block   d-lg-none">
+                        <div class="crf-footer--links crf-footer-m--social d-block d-lg-none">
                             <div class="crf-footer--header text-primary">Follow Us</div>
                             <ul>
-                                <li><a href="#" class="crf-footer--icon twitter"></a></li>
-                                <li><a href="#" class="crf-footer--icon facebook"></a></li>
-                                <li><a href="#" class="crf-footer--icon pinterest"></a></li>
-                                <li><a href="#" class="crf-footer--icon instagram"></a></li>
-                                <li><a href="#" class="crf-footer--icon googleplus"></a></li>
+                                <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                                <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                                <li><a href="#"><i class="bi bi-pinterest"></i></a></li>
+                                <li><a href="#"><i class="bi bi-instagram"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -122,11 +126,11 @@
             <div class="crf-footer--copyright text-primary">
                 &copy; 2022 - eCommerce.WebApp
             </div>
-        </div>
-    </footer>
+        </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/popper.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
